// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
    <IssueMessageTags />
  </div>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</Fragment>
`;

exports[`should render correctly: hide why is it an issue 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
    <IssueMessageTags />
  </div>
</Fragment>
`;

exports[`should render correctly: is deprecated rule 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
    <IssueMessageTags
      ruleStatus="DEPRECATED"
    />
  </div>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</Fragment>
`;

exports[`should render correctly: is removed rule 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
    <IssueMessageTags
      ruleStatus="REMOVED"
    />
  </div>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</Fragment>
`;

exports[`should render correctly: with engine info 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
    <IssueMessageTags
      engine="js"
    />
  </div>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</Fragment>
`;

exports[`should render correctly: with quick fix 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
    <IssueMessageTags
      quickFixAvailable={true}
    />
  </div>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</Fragment>
`;
